# IRremoteESP

./: .gitignore  CMakeLists.txt  library.json  platformio.ini
examples/IRrecvDumpV2/: IRrecvDumpV2.ino
examples/IRrepeaterIDF/: CMakeLists.txt  IRrepeaterIDF.cpp  platformio.ini
examples/IRsendDemoIDF/: CMakeLists.txt  platformio.ini
examples/IRsendDemoIDF/src/: IRsendDemoIDF.cpp
examples/RMTsendDemo/: RMTsendDemo.ino
examples/SmartIRRepeater/: SmartIRRepeater.ino
src/: IRac.cpp  IRac.h  IRrecv.cpp  IRrecv.h  IRremoteESP8266.h  IRrmt.cpp  IRrmt.h  IRsend.cpp  IRsend.h  IRtext.cpp  IRtimer.cpp  IRutils.cpp  IRutils.h  ir_Airton.h  ir_Airwell.cpp  ir_Airwell.h  ir_Amcor.h  ir_Argo.cpp  ir_Argo.h  ir_Bosch.cpp  ir_Bosch.h  ir_Carrier.h  ir_Coolix.cpp  ir_Coolix.h  ir_Corona.h  ir_Daikin.cpp  ir_Daikin.h  ir_Delonghi.h  ir_Ecoclim.cpp  ir_Ecoclim.h  ir_Electra.h  ir_Goodweather.cpp  ir_Goodweather.h  ir_Gree.h  ir_Haier.cpp  ir_Haier.h  ir_Hitachi.h  ir_Kelvinator.h  ir_LG.h  ir_Midea.cpp  (+26 more)
